--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# dependencies
 /node_modules
+/.pnp
+.pnp.js
 
+# testing
+/coverage
 
-
+# production
 /build
 
 # misc
@@ -11,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
